fixed the button text in kubernetes page, being shifted to top

--- a/source/assets/stylesheets/scss/_campaign.scss
+++ b/source/assets/stylesheets/scss/_campaign.scss
@@ -647,6 +647,7 @@ h1.main-caption {
                 h3 {
                     font-size: 1.5em;
                     color: #1C425C;
+                    margin: 0 auto;
                 }
                 &:hover {
                     background: #C8DB57;
@@ -685,6 +686,7 @@ h1.main-caption {
                 h3 {
                     color: #FFFFFF;
                     font-size: 1.5em;
+                    margin: 0 auto;
                 }
                 &:hover {
                     border: none;
@@ -819,6 +821,7 @@ h1.main-caption {
                 h3 {
                     font-size: 1.5em;
                     color: #FFFFFF;
+                    margin: 0 auto;
                 }
                 &:hover {
                     background: #C8DB57;
@@ -857,6 +860,7 @@ h1.main-caption {
                 h3 {
                     color: #1C425C;
                     font-size: 1.5em;
+                    margin: 0 auto;
                 }
                 &:hover {
                     border: none;
